--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Ex_03_Camera_Share</string>
+    <string name="app_name">Ex_05_motionTracking</string>
 </resources>
